# content-creation

./: .env.example  .gitignore  .skills.toml  AGENTS.md  CLAUDE.md  README.md  TOOLS.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: evaluate-video.md  knowledge.md  produce.md  publish.md  render.md  scene-update.md  shorts.md  status.md  storyboard.md
.claude/skills/: evaluate-video.md  knowledge.md  produce.md  publish.md  render.md  scene-update.md  shorts.md  status.md  storyboard.md  voice-variant.md
configs/: niche_intro_templates.toml  youtube_channels.toml
configs/promo-strategies/: locale-source-provenance.md
docs/: future-tasks.md  workflows.html  workflows.md
scripts/: install_cosyvoice.sh  migrate_storyboard_overlays.py  record_voice.md  restart-dashboard-if-changed.sh  start-dashboard.sh
skills/knowledge/: SKILL.md
skills/produce/: SKILL.md
skills/status/: SKILL.md
skills/storyboard/: SKILL.md
skills/voice-variant/: SKILL.md
src/pipeline/: cli.py  cli_compose.py  cli_image.py  cli_metadata.py  cli_mutate.py  cli_narration.py  cli_overlay.py  cli_proofread.py  cli_storyboard.py  cli_storyteller.py  cli_subtitle.py  cli_transition.py  cli_visual_review.py  cli_voice.py  config.py  constraints.py  explainer.py  gallery_cli.py  knowledge.py  models.py  niche_templates.py  orchestrator.py  session_log.py  storyboard.py  strategies.py  transcribe.py  verifier.py
tests/: conftest.py
tests/fixtures/: claude_analysis_response.json  claude_scriptwrite_response.json  sample.srt  sample_client_secret.json  sample_direct_response.json  sample_knowledge.json  sample_metadata.json  sample_script.md  sample_storyboard.json  sample_youtube_channels.toml  transcript.json
tests/integration/: test_compose_with_transitions.py  test_dashboard_jobs_lifespan.py  test_dashboard_verifier_api.py  test_highlight_extractor.py  test_jobs_endpoints.py  test_mutation_endpoints.py  test_prerecorded_end_to_end.py  test_research_live.py  test_sse_endpoint.py  test_static_self_tests.py  test_trust_gate_round_trip.py
tests/unit/: test_acquire.py  test_acquire_local.py  test_acquire_web.py  test_agent_runner.py  test_analyze.py  test_animation_review.py  test_audio_normalize.py  test_base.py  test_book_scene.py  test_cli.py  test_cli_compose.py  test_cli_compose_transition_invalidation.py  test_cli_image.py  test_cli_metadata.py  test_cli_mutate.py  test_cli_narration.py  test_cli_narration_regen.py  test_cli_overlay.py  test_cli_proofread.py  test_cli_storyboard_visual.py  test_cli_storyteller.py  (+75 more)
voices/: registry.json
(+187 files in other folders)
