[project]
name = "content-pipeline"
version = "0.1.0"
description = "YouTube content porting pipeline"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic-settings>=2.7",
    "yt-dlp>=2025.3",
    "youtube-transcript-api>=1.0",
    "anthropic>=0.49",
    "edge-tts>=7.0",
    "ffmpeg-python>=0.2",
    "pysrt>=1.1",
    "structlog>=25.1",
    "trafilatura>=2.0",
    "httpx>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
    "openai>=2.30.0",
    "google-genai>=0.3.0",
    "pillow>=12.2.0",
    "imagehash>=4.3",
    "selectolax>=0.3.21",
    "pyyaml>=6.0",
    "python-multipart>=0.0.27",
]

[project.scripts]
pipeline = "pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that load large models",
    "integration: marks tests requiring FFmpeg binary",
    "network: marks tests requiring network + API keys",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    # Typer commands intentionally use Option/Argument objects as defaults.
    "B008",
    # Public exception class names are already part of local APIs.
    "N818",
    # Long prompt literals and compact test fixtures are more readable unwrapped.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Some locale regression tests use CJK names to document the exact vocabulary under test.
    "N802",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_any_generics = false
disable_error_code = [
    # The pipeline moves structured JSON through provider SDKs and Pydantic-like dict payloads.
    # Keep mypy useful for import/name coverage without blocking on dynamic boundary details.
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "func-returns-value",
    "index",
    "no-any-return",
    "return-value",
    "typeddict-item",
    "union-attr",
]
